--- a/config/singbox/config_tun_office.json
+++ b/config/singbox/config_tun_office.json
@@ -27,7 +27,7 @@
    [
      {"tag": "dns_direct", "address": "223.5.5.5", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
      {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "dns_office", "address": "10.60.1.13", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
+     {"tag": "dns_office", "address": "10.60.1.13", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "office"}
    ],
    "rules": 
    [
