--- a/config/singbox/config_tun_office.json
+++ b/config/singbox/config_tun_office.json
@@ -141,7 +141,7 @@
     { "tag": "geoip-cn", "type": "remote", "format": "binary", "url": "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/cn.srs", "download_detour": "🚀 节点选择" },
     { "tag": "geoip-private", "type": "remote", "format": "binary", "url": "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/private.srs", "download_detour": "🚀 节点选择" },
 
-    { "tag": "office", "type": "remote", "format": "source", "url": "https://raw.githubusercontent.com/chiyewordpress/yumingfenlei-bangonghuanjing/refs/heads/main/yuming.json", "download_detour": "🚀 节点选择" },
+    { "tag": "office", "type": "remote", "format": "source", "url": "https://raw.githubusercontent.com/chiyewordpress/yumingfenlei-bangonghuanjing/refs/heads/main/yuming.json", "download_detour": "🚀 节点选择" }
   ]
 }
 }
