--- a/config/singbox/config_tun_office1.json
+++ b/config/singbox/config_tun_office1.json
@@ -48,7 +48,7 @@
     "address": "172.19.0.1/30",
     "mtu": 9000,
     "auto_route": true,
-    "auto_redirect": true,
+    "auto_redirect": false,
     "strict_route": true,
     "stack": "system",
     "platform": {
