--- a/config/singbox/config_tun_office.json
+++ b/config/singbox/config_tun_office.json
@@ -15,8 +15,8 @@
       "default_mode": "rule"
     },
   "cache_file": {
-    "enabled": true,
-    "path": "/etc/sing-box/cache.db",
+    "enabled": false,
+    "path": "",
     "store_fakeip": false
     }
   },
